[package]
name = "Dunebot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.0"
serenity = "0.12"
tmdb-api = "0.8.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
color-thief = "0.2"
reqwest = "0.12.13"
image = "0.25.5"
chrono = "0.4.40"
scraper = "0.23.1"
urlencoding = "2.1.3"
csv = "1.3.1"
chrono-tz = "0.10.3"
